SynProdGITV1/force-app/main/default/objects/Product_Category__c/fields/Hierarchy_Info__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Info__c</fullName>
    <label>Hierarchy Info</label>
    <length>80</length>
    <type>Text</type>
</CustomField>