SynProdGITV1/force-app/main/default/objects/Product_Category__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Product Hierarchy</fullName>
            </value>
            <value>
                <fullName>2 - Chemical Group</fullName>
            </value>
            <value>
                <fullName>3 - Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>