SynProdGITV1/force-app/main/default/objects/Product_Category__c/fields/Parent_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Category</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Child Product Categories</relationshipLabel>
    <relationshipName>Child_Product_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>