SynProdGITV1/force-app/main/default/objects/Product_Category__c/fields/Product_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_ID__c</fullName>
    <externalId>true</externalId>
    <label>Product Category ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>