SynProdGITV1/force-app/main/default/objects/Product_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Category_ID__c</columns>
    <columns>Parent_Product_Category__c</columns>
    <columns>Level__c</columns>
    <columns>Hierarchy_Info__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>2 - Chemical Group</value>
    </filters>
    <label>All</label>
</ListView>